--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,6 +10,15 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
+    services:
+      db:
+        image: mysql:5.7
+        ports:
+          - 13306:3306
+        env:
+          MYSQL_ROOT_PASSWORD: ""
+          MYSQL_DATABASE: partition_test
+          MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
     steps:
     - uses: actions/checkout@v4
 
@@ -20,3 +29,5 @@ jobs:
 
     - name: Test
       run: go test -v ./...
+      env:
+        MYSQL_TEST_DSN: 'root@tcp(127.0.0.1:13306)/partition_test'
