--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,10 +9,14 @@ on:
 jobs:
 
   test:
+    strategy:
+        matrix:
+          go: [stable, oldstable]
+          mysql: [mysql:5.7, mysql:8] # I know 5.7 has been reached EoL...
     runs-on: ubuntu-latest
     services:
       db:
-        image: mysql:5.7
+        image: ${{ matrix.mysql }}
         ports:
           - 13306:3306
         env:
@@ -25,7 +29,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: '1.21'
+        go-version: ${{ matrix.go }}
 
     - name: Test
       run: go test -v -tags=integration ./...
