--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,7 +2,7 @@ name: Go
 
 on:
   push:
-    branches: [ "github-actions" ] #[ "main" ]
+    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
