--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,6 +13,7 @@ jobs:
         matrix:
           go: ['stable', 'oldstable']
           mysql: ['mysql:5.7', 'mysql:8'] # I know 5.7 has been reached EoL...
+        fail-fast: false
     runs-on: ubuntu-latest
     services:
       db:
